5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1638_652.log
== SUBMITION (2019-04-11 11:00:38) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- EXECUTION TIME:
0.176826
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:00:41) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:38) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:42) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:02:03) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- EXECUTION TIME:
0.169347
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:02:31) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- EXECUTION TIME:
0.144958
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:33) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:26) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:32) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:46) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:03:56) 
-- CODE:
num=int(input())

if(num>=100 and num<=999):
	print("SIM");
else:
	print("NAO")
	
-- EXECUTION TIME:
0.167103
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:43:16) 
-- CODE:
num=int(input());
num2=num//100;
num3=num2*100;
if((num%num3)==0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.149631
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:20) 
-- CODE:
num=int(input());
num2=num//100;
num3=num2*100;
if((num%num3)==0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:44:20) 
-- CODE:
num=int(input());
num2=num//100;
num3=num2*100;
num4=num-num3:
if((num%num4)==0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.14345
-- ERROR:
  File "/home/codebench/codes/1638/652/main.py", line 4
    num4=num-num3:
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:24) 
-- CODE:
num=int(input());
num2=num//100;
num3=num2*100;
num4=num-num3:
if((num%num4)==0):
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 4
    num4=num-num3:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:47) 
-- CODE:
num=int(input());
num2=num//100;
num3=num2*100;
num4=num-num3 ;
if((num%num4)==0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:44:50) 
-- CODE:
num=int(input());
num2=num//100;
num3=num2*100;
num4=num-num3 ;
if((num%num4)==0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.145016
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
